Add vscode settings for color theme

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,5 +4,8 @@
     "extensions": [
         "golang.Go",
         "ms-python.python"
-    ]
+    ],
+    "settings": {
+        "workbench.colorTheme": "Default Dark+"
+    }
 }
